Low rank matrix && improve base red method

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,10 +164,322 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import scipy.sparse as sparse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 534,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_matrix_from_file(filename):\n",
+    "    \"\"\"Reads a matrix from a binary file written by the C++ code.\"\"\"\n",
+    "    try:\n",
+    "        with open(filename, \"rb\") as f:\n",
+    "            rows = np.fromfile(f, dtype=np.int32, count=1)[0]\n",
+    "            cols = np.fromfile(f, dtype=np.int32, count=1)[0]\n",
+    "            matrix = np.fromfile(f, dtype=np.float64, count=rows * cols).reshape(cols, rows)\n",
+    "            return matrix.T\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Error: File not found: {filename}\")\n",
+    "        return None\n",
+    "    except Exception as e: # Catch other potential errors during file reading\n",
+    "        print(f\"An error occurred: {e}\")\n",
+    "        return None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualize_matrix_sparsity(matrix, title=\"Matrix Sparsity\"):\n",
+    "    \"\"\"Visualizes the sparsity pattern of a matrix using matplotlib.\n",
+    "\n",
+    "    Args:\n",
+    "        matrix: A NumPy array or SciPy sparse matrix.\n",
+    "        title: The title of the plot.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    plt.figure(figsize=(8, 6))  # Adjust figure size for better visualization\n",
+    "\n",
+    "    if sparse.issparse(matrix):\n",
+    "        plt.spy(matrix, markersize=1)  # Use spy for sparse matrices\n",
+    "    else:\n",
+    "        plt.imshow(matrix, cmap=\"viridis\", interpolation=\"nearest\") # imshow for dense matrices\n",
+    "\n",
+    "    plt.title(title)\n",
+    "    plt.xlabel(\"Columns\")\n",
+    "    plt.ylabel(\"Rows\")\n",
+    "    plt.colorbar(label=\"Value (if dense)\") # Add colorbar for dense matrices\n",
+    "    plt.tight_layout() # Adjust layout to prevent labels from overlapping\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 552,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.009958731976598951"
+      ]
+     },
+     "execution_count": 552,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "invGT = read_matrix_from_file(\"invSVDmat_gt_octree.bin\")\n",
+    "inv = read_matrix_from_file(\"invSVDmat.bin\")\n",
+    "np.min(np.diag(inv))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 553,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.008965907255509428\n",
+      "0.15647568160852343\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.mean(np.abs(invGT - inv)))\n",
+    "print(np.mean(np.abs(np.diag(invGT) - np.diag(inv))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(inv[0, :] > 50.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 548,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.980748546747208e-12"
+      ]
+     },
+     "execution_count": 548,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conv = read_matrix_from_file(\"conv.bin\")\n",
+    "a = conv.T @ conv\n",
+    "np.sum(np.abs(np.identity(a.shape[0]) - a))\n",
+    "# np.sum(np.abs(np.diag(np.identity(a.shape[0])) - np.diag(a)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 433,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.030303030303030304"
+      ]
+     },
+     "execution_count": 433,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G=33\n",
+    "# T=0.5*G\n",
+    "x = np.linspace(0., G-1, num=G)\n",
+    "y = np.linspace(0., G-1, num=G)\n",
+    "def fun(o, c):\n",
+    "    # return np.cos(np.pi * o * x / (G-1)) * np.cos(np.pi * c * y / (G-1))\n",
+    "    return np.cos(np.pi * o * x / (G-1))\n",
+    "\n",
+    "np.mean(fun(3,2) * fun(5,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# To-do: this should output values too.\n",
+    "\n",
+    "def grid_laplacian_eigenfunctions(num_modes,gs,l):\n",
+    "    \"\"\"\n",
+    "    Returns the eigenfunctions and eigenvalues of the Laplacian on a regular grid with Neumann boundary conditions.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    num_modes : int\n",
+    "        Number of eigenfunctions and eigenvalues to return\n",
+    "    gs : (dim,) int numpy array\n",
+    "        Grid size in each dimension\n",
+    "    l : (dim,) float numpy array\n",
+    "        Length of the grid in each dimension\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    vecs : (num_grid_points,num_modes) numpy array\n",
+    "        Eigenfunctions\n",
+    "\n",
+    "    See also\n",
+    "    --------\n",
+    "    poisson_surface_reconstruction\n",
+    "\n",
+    "    Notes\n",
+    "    -----\n",
+    "    This function uses the formula in \"Eigenvalues of the Laplacian with Neumann Boundary Conditions\" by H. P. W. Gottlieb, 1985. Right now, this function only works for 3D and 2D grids. It should be easy/trivial to extend to higher dimensions.\n",
+    "\n",
+    "    Examples\n",
+    "    --------\n",
+    "    ```python\n",
+    "    import numpy as np\n",
+    "    import gpytoolbox\n",
+    "    gs = np.array([10,10])\n",
+    "    l = np.array([1.0,1.0])\n",
+    "    num_modes = 10\n",
+    "    vecs, vals = gpytoolbox.grid_laplacian_eigenfunctions(num_modes,gs,l)\n",
+    "    ```\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # There's probably some refactoring that could be done on this code so that the dimensionality is not hard-coded.\n",
+    "\n",
+    "    # Get grid\n",
+    "    dim = gs.shape[0]\n",
+    "\n",
+    "    def psi(N,l,v):\n",
+    "        d = v.shape[1]\n",
+    "        out = np.ones(v.shape[0])\n",
+    "        val = 0\n",
+    "        for dd in range(d):\n",
+    "            out = out*np.cos(N[dd]*np.pi*v[:,dd]/l[dd])\n",
+    "            val = val + (np.pi**2.0)*((N[dd]/l[dd])**2.0)\n",
+    "        return out, val\n",
+    "\n",
+    "\n",
+    "    if dim==3:\n",
+    "        gx, gy, gz = np.meshgrid(np.linspace(0,l[0],gs[0]),np.linspace(0,l[1],gs[1]),np.linspace(0,l[2],gs[2]),indexing='ij')\n",
+    "        v = np.concatenate((np.reshape(gx,(-1, 1),order='F'),np.reshape(gy,(-1, 1),order='F'),np.reshape(gz,(-1, 1),order='F')),axis=1)\n",
+    "        # This is ad-hoc so it's faster... We should come up with a smarter way of doing this.\n",
+    "        num_in_each_dim = round(np.sqrt(num_modes//8))\n",
+    "        # num_in_each_dim = num_modes\n",
+    "        vals_debug = np.zeros(num_in_each_dim*num_in_each_dim*num_in_each_dim)\n",
+    "        K_vector = np.arange(num_in_each_dim*num_in_each_dim*num_in_each_dim) % num_in_each_dim\n",
+    "        J_vector = np.arange(num_in_each_dim*num_in_each_dim*num_in_each_dim) // num_in_each_dim % num_in_each_dim\n",
+    "        I_vector = np.arange(num_in_each_dim*num_in_each_dim*num_in_each_dim) // (num_in_each_dim*num_in_each_dim)\n",
+    "\n",
+    "        ind_vectors = []\n",
+    "        ind_vectors.append(I_vector)\n",
+    "        ind_vectors.append(J_vector)\n",
+    "        ind_vectors.append(K_vector)\n",
+    "        for dd in range(dim):\n",
+    "            vals_debug = vals_debug + (np.pi**2.0)*((ind_vectors[dd]/l[dd])**2.0)\n",
+    "        # assert((vals_debug==vals).all())\n",
+    "        order = np.argsort(vals_debug)\n",
+    "        relevant_indices = order[0:num_modes]\n",
+    "        vecs_debug = np.ones((v.shape[0],num_modes))\n",
+    "        for s in range(len(relevant_indices)):\n",
+    "            vecs_debug[:,s], _ = psi([I_vector[relevant_indices[s]],J_vector[relevant_indices[s]],K_vector[relevant_indices[s]]],l,v)\n",
+    "        vecs = vecs_debug\n",
+    "        vals = vals_debug\n",
+    "        vals = vals[relevant_indices]\n",
+    "    else:\n",
+    "        gx, gy = np.meshgrid(np.linspace(0,l[0],gs[0]),np.linspace(0,l[1],gs[1]))\n",
+    "        # h = np.array([gx[1,1]-gx[0,0],gy[1,1]-gy[0,0]])\n",
+    "        v = np.concatenate((np.reshape(gx,(-1, 1)),np.reshape(gy,(-1, 1))),axis=1)\n",
+    "        num_in_each_dim = num_modes // 10 \n",
+    "        num_in_each_dim = num_modes\n",
+    "        vals = np.zeros(num_in_each_dim*num_in_each_dim)\n",
+    "\n",
+    "        I_vector = np.arange(num_in_each_dim*num_in_each_dim)// num_in_each_dim\n",
+    "        \n",
+    "        J_vector = np.arange(num_in_each_dim*num_in_each_dim)% num_in_each_dim\n",
+    "        \n",
+    "        ind_vectors = []\n",
+    "        ind_vectors.append(I_vector)\n",
+    "        ind_vectors.append(J_vector)\n",
+    "\n",
+    "        for dd in range(dim):\n",
+    "            vals = vals + (np.pi**2.0)*((ind_vectors[dd]/l[dd])**2.0)\n",
+    "        order = np.argsort(vals)\n",
+    "        relevant_indices = order[0:num_modes]\n",
+    "        vecs_debug = np.ones((v.shape[0],num_modes))\n",
+    "        for s in range(len(relevant_indices)):\n",
+    "            vecs_debug[:,s], _ = psi([I_vector[relevant_indices[s]],J_vector[relevant_indices[s]]],l,v)\n",
+    "        # print(I_vector[relevant_indices])\n",
+    "        # print(J_vector[relevant_indices])\n",
+    "        vecs = vecs_debug\n",
+    "        vals = vals[relevant_indices]\n",
+    "    # This is not necessary\n",
+    "    # vecs = vecs/np.tile(np.linalg.norm(vecs,axis=0),(vecs.shape[0],1))\n",
+    "    # print(np.linalg.norm(vecs,axis=0),(vecs.shape[0],1))\n",
+    "\n",
+    "    return vecs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0716531276702979"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L = grid_laplacian_eigenfunctions(1024,np.array((32, 32)), np.array((1., 1.)))\n",
+    "a = L.T @ L\n",
+    "np.mean(np.abs(np.identity(1024) - a))"
+   ]
   }
  ],
  "metadata": {
